Update tests, add some more recent java ver